# fastfmt

./: .clang-format  .cmake-format  CMakeLists.txt  README.md
src/fastfmt/: CMakeLists.txt  detail.cpp  detail.hpp  fastfmt.cpp  fastfmt.hpp  fastfmt.test.cpp
src/fastfmt/detail/: append_to_str.hpp  checked_arith.hpp  checked_arith.test.cpp  concepts.hpp  output_arg.hpp
tools/: int_to_chars_max_len.py
